objects/vlocity_ins__FinancialSecurity__c.object
<CustomObject>
    <description>The object to store marketing securities, such as stocks, bonds, options and mutual funds.</description>
    <fields>
        <fullName>vlocity_ins__AssetClass__c</fullName>
        <label>Asset Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bond</fullName>
                </value>
                <value>
                    <fullName>Stock</fullName>
                </value>
                <value>
                    <fullName>Money Market</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__AssetSubClass__c</fullName>
        <label>Asset Sub Class</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>vlocity_ins__AssetClass__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Domestic</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
                <value>
                    <fullName>Small</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if approved by compliance dept.</description>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__MarketIdentifierCode__c</fullName>
        <description>Market Identifier Code (http://www.fixtradingcommunity.org/pg/structure/tech-specs/additional-resources/exchange-codes, http://www.iso10383.org/)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Exchange</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PriceAsOfDate__c</fullName>
        <description>The date/time of the security price</description>
        <encryptionScheme>None</encryptionScheme>
        <label>As of Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Price__c</fullName>
        <description>The security price</description>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Rating__c</fullName>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Buy</fullName>
                </value>
                <value>
                    <fullName>Sell</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__SecurityIdentifierType__c</fullName>
        <label>Security Identifier Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CUSIP</fullName>
                </value>
                <value>
                    <fullName>SEDOL</fullName>
                </value>
                <value>
                    <fullName>RIC</fullName>
                </value>
                <value>
                    <fullName>ISIN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__SecurityIdentifier__c</fullName>
        <description>Security identifier. CUSIP (9 character alphanumerical code for US and Canadian stocks), SEDOL (7 character alphanumerical code for UK securities that are not traded in US), ISIN (12 character alphanumerical code to identify bonds, commercial paper, equities, warrants and most of the listed derivatives), RIC is used by Reuters to identify financial instruments and indices.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Security Identifier</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SecurityType__c</fullName>
        <description>Type of the security</description>
        <label>Security Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mutual Fund</fullName>
                </value>
                <value>
                    <fullName>Stock</fullName>
                </value>
                <value>
                    <fullName>Debt</fullName>
                </value>
                <value>
                    <fullName>Option</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__TickerSymbol__c</fullName>
        <description>The SYMBOL is another unique identifies used to represent a particular security listed on an exchange or  traded publicly</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Symbol</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Security</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <columns>NAME</columns>
        <columns>vlocity_ins__TickerSymbol__c</columns>
        <columns>vlocity_ins__SecurityType__c</columns>
        <columns>vlocity_ins__AssetClass__c</columns>
        <columns>vlocity_ins__AssetSubClass__c</columns>
        <columns>vlocity_ins__IsApproved__c</columns>
        <columns>vlocity_ins__Rating__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>vlocity_ins__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Securities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>